css fixed
fixed a buggy horizontal scroll issue on quiz page

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ div {
   height: 90vh;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
 
 .QuizBoard {
